--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
+    "@tajdid-academy/tajdid-corelib": "^0.0.78",
     "expo": "~51.0.8",
     "expo-av": "~14.0.5",
     "expo-constants": "~16.0.1",
