--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
+    "ts:check": "tsc",
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
@@ -34,6 +35,7 @@
     "react-native": "0.74.1",
     "react-native-blob-util": "^0.19.9",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
