--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.0.2",
     "@tajdid-academy/tajdid-corelib": "^0.0.78",
+    "@tanstack/react-query": "^5.40.0",
+    "axios": "^1.7.2",
     "expo": "~51.0.8",
     "expo-av": "~14.0.5",
     "expo-constants": "~16.0.1",
