--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-native-vimeo-iframe": "^1.2.1",
     "react-native-web": "~0.19.10",
     "react-native-webview": "^13.10.2",
-    "react-native-youtube-iframe": "^2.3.0"
+    "react-native-youtube-iframe": "^2.3.0",
+    "expo-haptics": "~13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
