--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@hookform/resolvers": "^3.4.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.0.2",
     "@tajdid-academy/tajdid-corelib": "^0.0.78",
@@ -27,6 +28,7 @@
     "expo-constants": "~16.0.1",
     "expo-dev-client": "~4.0.14",
     "expo-font": "~12.0.5",
+    "expo-haptics": "~13.0.1",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
     "expo-splash-screen": "~0.27.4",
@@ -35,6 +37,7 @@
     "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-native": "0.74.1",
     "react-native-blob-util": "^0.19.9",
     "react-native-gesture-handler": "~2.16.1",
@@ -48,7 +51,7 @@
     "react-native-web": "~0.19.10",
     "react-native-webview": "^13.10.2",
     "react-native-youtube-iframe": "^2.3.0",
-    "expo-haptics": "~13.0.1"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
