--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@gorhom/bottom-sheet": "^4.6.3",
     "@hookform/resolvers": "^3.4.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.0.2",
@@ -29,6 +30,7 @@
     "expo-dev-client": "~4.0.14",
     "expo-font": "~12.0.5",
     "expo-haptics": "~13.0.1",
+    "expo-image-picker": "~15.0.5",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
     "expo-splash-screen": "~0.27.4",
@@ -51,8 +53,7 @@
     "react-native-web": "~0.19.10",
     "react-native-webview": "^13.10.2",
     "react-native-youtube-iframe": "^2.3.0",
-    "zod": "^3.23.8",
-    "expo-image-picker": "~15.0.5"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
