--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-dev-client": "~4.0.14",
     "expo-font": "~12.0.5",
     "expo-haptics": "~13.0.1",
+    "expo-image-picker": "~15.0.5",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
     "expo-splash-screen": "~0.27.4",
@@ -51,8 +52,7 @@
     "react-native-web": "~0.19.10",
     "react-native-webview": "^13.10.2",
     "react-native-youtube-iframe": "^2.3.0",
-    "zod": "^3.23.8",
-    "expo-image-picker": "~15.0.5"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
