redirect link working

--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
+    "scheme": "tajdidacademy",
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/images/splash.png",
@@ -14,7 +14,10 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.blackcymbal.Tajdidexpoapp"
+      "bundleIdentifier": "com.blackcymbal.Tajdidexpoapp",
+      "infoPlist": {
+        "LSApplicationQueriesSchemes": ["tajdidacademy"]
+      }
     },
     "android": {
       "adaptiveIcon": {
