--- a/eas.json
+++ b/eas.json
@@ -13,7 +13,15 @@
     "preview": {
       "distribution": "internal"
     },
-    "production": {}
+    "production": {
+      "ios": {
+        "resourceClass": "m1-medium"
+      },
+      "android": {
+        "buildType": "apk",
+        "image": "latest"
+      }
+    }
   },
   "submit": {
     "production": {}
