--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-vimeo-iframe": "^1.2.1",
     "react-native-web": "~0.19.10",
     "react-native-webview": "^13.10.2",
